fix: filter scrollbar adjustment

--- a/webui/react/src/components/FilterForm/components/FilterForm.module.scss
+++ b/webui/react/src/components/FilterForm/components/FilterForm.module.scss
@@ -11,7 +11,7 @@
 }
 .filter {
   max-height: 300px;
-  overflow: scroll;
+  overflow: auto;
   padding-right: 16px;
 }
 .buttonContainer {
